--- a/portfolio-designe-25/index.html
+++ b/portfolio-designe-25/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <header>
+  <header class="header secondary-bg">
     <nav>
       <h3 class="nav-tiltle">Ma<span class="text-primary">r</span>y</h3>
       <ul>
@@ -36,6 +36,16 @@
       <img src="./assets/img/herdy.png" alt="herdy">
     </div>
   </header>
+  <main>
+    <section class="about">
+      <h3 class="section-title">About Me</h3>
+      <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing
+        simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured
+        exceptional resulfs while working with me. Delivering work within time and budget which meets clients
+        requirements in our mata.</p>
+
+    </section>
+  </main>
 </body>
 
 </html>
