--- a/portfolio-designe-25/index.html
+++ b/portfolio-designe-25/index.html
@@ -37,12 +37,31 @@
     </div>
   </header>
   <main>
-    <section class="about">
+    <section class="about secondary-bg">
       <h3 class="section-title">About Me</h3>
       <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing
         simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured
         exceptional resulfs while working with me. Delivering work within time and budget which meets clients
         requirements in our mata.</p>
+
+      <div class="about-items">
+        <div class="about-item">
+          <p class="item-title">Name</p>
+          <p class="item-description">Mary Herdy</p>
+        </div>
+        <div class="about-item">
+          <p class="item-title">Email</p>
+          <p class="item-description">nayem@gmail.com</p>
+        </div>
+        <div class="about-item">
+          <p class="item-title">Date Of Birth</p>
+          <p class="item-description">2025-0526</p>
+        </div>
+        <div class="about-item">
+          <p class="item-title">From</p>
+          <p class="item-description">Dhaka</p>
+        </div>
+      </div>
 
     </section>
   </main>
