portfolio designe skill section

--- a/portfolio-designe-25/index.html
+++ b/portfolio-designe-25/index.html
@@ -64,6 +64,38 @@
       </div>
 
     </section>
+
+    <section class="skills">
+      <h3 class="section-title">What I do</h3>
+      <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing
+        simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured
+        exceptional resulfs while working with me. Delivering work within time and budget which meets clients
+        requirements in our mata.</p>
+
+      <div class="skills-container">
+        <div class="skill">
+          <img src="./assets/img/logo-javascript 1.png" alt="Javascript">
+          <h4 class="skill-title">Vanilla JavaScript</h4>
+          <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur,
+            necessitatibus?</p>
+        </div>
+        <div class="skill">
+          <img src="./assets/img/Group.png" alt="Group.png">
+          <h4 class="skill-title">React</h4>
+          <p class="skill-description">Nobis quidem aperiam tempore iure numquam explicabo sed illo error!</p>
+        </div>
+        <div class="skill">
+          <img src="./assets/img/nodejs-icon 1.png" alt="herdy">
+          <h4 class="skill-title">Node.js</h4>
+          <p class="skill-description">Voluptatem perspiciatis facilis modi optio ex magni cum placeat ut.</p>
+        </div>
+        <div class="skill">
+          <img src="./assets/img/nodejs-icon 1.png" alt="herdy">
+          <h4 class="skill-title">MongoDB</h4>
+          <p class="skill-description">Corporis repellendus cupiditate labore quos rerum sit aliquid veniam odio?</p>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 
