--- a/portfolio-designe-25/index.html
+++ b/portfolio-designe-25/index.html
@@ -96,6 +96,63 @@
         </div>
       </div>
     </section>
+
+    <section class="resume">
+      <h3 class="section-title">A summary of My Resume</h3>
+      <div class="resume-container">
+        <!-- .resume-column*2>h3.resume-column-title+.expreiance*3>h4.wxperience-title+h5.exprieance-sub-title+.experiance-descripiton>lorem10 -->
+        <div class="resume-column">
+          <h3 class="resume-column-title">My Education</h3>
+          <div class="expreiance">
+            <h4 class="expreiance-title">Master in Computer Engineering</h4>
+            <h5 class="exprieance-sub-title">Harvard University / 2015 - 2017</h5>
+            <div class="experiance-descripiton">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
+              eligendi voluptatum doloremque ex in, laudantium eius sequi modi libero quasi.</div>
+          </div>
+          <hr>
+          <div class="expreiance">
+            <h4 class="expreiance-title">Master in Computer Engineering</h4>
+            <h5 class="exprieance-sub-title">Harvard University / 2015 - 2017</h5>
+            <div class="experiance-descripiton">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
+              eligendi voluptatum doloremque ex in, laudantium eius sequi modi libero quasi.</div>
+          </div>
+          <hr>
+          <div class="expreiance">
+            <h4 class="expreiance-title">Master in Computer Engineering</h4>
+            <h5 class="exprieance-sub-title">Harvard University / 2015 - 2017</h5>
+            <div class="experiance-descripiton">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
+              eligendi voluptatum doloremque ex in, laudantium eius sequi modi libero quasi.</div>
+          </div>
+        </div>
+
+        <div class="resume-column">
+          <h3 class="resume-column-title">My Experience </h3>
+          <div class="expreiance">
+            <h4 class="expreiance-title">Sr. Font End Developer</h4>
+            <h5 class="exprieance-sub-title">Apple Inc / 2020 - Current</h5>
+            <div class="experiance-descripiton">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
+              eligendi voluptatum doloremque ex in, laudantium eius sequi modi libero quasi.</div>
+          </div>
+          <hr>
+          <div class="expreiance">
+            <h4 class="expreiance-title">Jr. Font End Developer</h4>
+            <h5 class="exprieance-sub-title">Dribbble Inc / 2018 - 2022</h5>
+            <div class="experiance-descripiton">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
+              eligendi voluptatum doloremque ex in, laudantium eius sequi modi libero quasi.</div>
+          </div>
+          <hr>
+          <div class="expreiance">
+            <h4 class="expreiance-title">HTML Developer</h4>
+            <h5 class="exprieance-sub-title">Adobe Inc / 2017 - 2018</h5>
+            <div class="experiance-descripiton">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
+              eligendi voluptatum doloremque ex in, laudantium eius sequi modi libero quasi.</div>
+          </div>
+        </div>
+      </div>
+      <div class="cv-download-button">
+        <button class="btn-primary">Download CV</button>
+      </div>
+    </section>
   </main>
 </body>
 
