--- a/portfolio-designe-25/index.html
+++ b/portfolio-designe-25/index.html
@@ -153,6 +153,29 @@
         <button class="btn-primary">Download CV</button>
       </div>
     </section>
+
+    <footer class="secondary-bg ">
+      <div class="footer-container">
+        <div class="footer-column">
+          <h3 class="section-title">Lets Connect</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia, ratione.</p>
+          <div class="social-icon">
+            <a href=""><img src="./assets/img/Frame-1.png" alt=""></a>
+            <a href=""><img src="./assets/img/Frame-2.png" alt=""></a>
+            <a href=""><img src="./assets/img/Frame.png" alt=""></a>
+          </div>
+        </div>
+        <div class="footer-column">
+          <h3 class="section-title">Let’s Message me</h3>
+          <form action="">
+            <input type="text" placeholder=" Your Name">
+            <input type="text" placeholder="Your Email">
+            <textarea name="" id="">Message</textarea>
+            <button class="btn-primary">Submit</button>
+          </form>
+        </div>
+      </div>
+    </footer>
   </main>
 </body>
 
